Update NavBar with hover links

--- a/flask_app/static/css/all.css
+++ b/flask_app/static/css/all.css
@@ -8269,6 +8269,12 @@ textarea.form-control-lg {
   margin: 0;
   padding: 0; }
 
+.categoryBx ul li a {
+  text-decoration: none; }
+
+.categoryBx ul li a:hover {
+  text-decoration: underline; }
+
 @media (max-width: 991px) {
   .nav-item.dropdown.dropdown-mega .dropdown-menu {
     width: 100%; }
