--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -44,44 +44,25 @@
                                             </li>
                                             <ul class="mt-3">
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
+                                                    <a class="text-reset" href="#">Carcasas</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
-                                                </li>
-                                            </ul>
-                                        </ul>
-                                        <ul class="categoryBx">
-                                            <li>
-                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
-                                            </li>
-                                            <ul class="mt-3">
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                             </ul>
                                         </ul>
@@ -91,35 +72,16 @@
                                             </li>
                                             <ul class="mt-3">
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
+                                                    <a class="text-reset" href="#">Carcasas</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
-                                                </li>
-                                            </ul>
-                                        </ul>
-                                        <ul class="categoryBx">
-                                            <li>
-                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
-                                            </li>
-                                            <ul class="mt-3">
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                             </ul>
                                         </ul>
@@ -129,35 +91,16 @@
                                             </li>
                                             <ul class="mt-3">
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
+                                                    <a class="text-reset" href="#">Carcasas</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
-                                                </li>
-                                            </ul>
-                                        </ul>
-                                        <ul class="categoryBx">
-                                            <li>
-                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
-                                            </li>
-                                            <ul class="mt-3">
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
-                                                </li>
-                                                <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                             </ul>
                                         </ul>
@@ -167,16 +110,16 @@
                                             </li>
                                             <ul class="mt-3">
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
+                                                    <a class="text-reset" href="#">Carcasas</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                             </ul>
                                         </ul>
@@ -186,16 +129,73 @@
                                             </li>
                                             <ul class="mt-3">
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Carcasas</a>
+                                                    <a class="text-reset" href="#">Carcasas</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Cargadores</a>
+                                                    <a class="text-reset" href="#">Cargadores</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Baterias</a>
+                                                    <a class="text-reset" href="#">Baterias</a>
                                                 </li>
                                                 <li>
-                                                    <a class="text-reset text-decoration-none" href="#">Inalambricos</a>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
+                                                </li>
+                                            </ul>
+                                        </ul>
+                                        <ul class="categoryBx">
+                                            <li>
+                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
+                                            </li>
+                                            <ul class="mt-3">
+                                                <li>
+                                                    <a class="text-reset" href="#">Carcasas</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Cargadores</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Baterias</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
+                                                </li>
+                                            </ul>
+                                        </ul>
+                                        <ul class="categoryBx">
+                                            <li>
+                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
+                                            </li>
+                                            <ul class="mt-3">
+                                                <li>
+                                                    <a class="text-reset" href="#">Carcasas</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Cargadores</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Baterias</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
+                                                </li>
+                                            </ul>
+                                        </ul>
+                                        <ul class="categoryBx">
+                                            <li>
+                                                <a class="text-decoration-none text-altprimary h5" href="">Celulares</a>
+                                            </li>
+                                            <ul class="mt-3">
+                                                <li>
+                                                    <a class="text-reset" href="#">Carcasas</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Cargadores</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Baterias</a>
+                                                </li>
+                                                <li>
+                                                    <a class="text-reset" href="#">Inalambricos</a>
                                                 </li>
                                             </ul>
                                         </ul>
@@ -208,7 +208,7 @@
                 <form class="d-flex ms-auto mt-3 mt-lg-0">
                     <div class="input-group">
                         <input class="form-control border-0 mr-2" type="search" placeholder="Buscar" aria-label="Search" />
-                        <button class="btn btn-primary border-0 text-light" type="submit">
+                        <button class="btn btn-sm btn-primary border-0 text-light" type="submit">
                       Buscar
                     </button>
                     </div>
@@ -226,7 +226,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item mx-3 align-items-center d-flex flex-column flex-lg-row align-items-center">
-                        <a class="btn btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a>
+                        <a class="btn btn-sm btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#login">Ingrese</a>
                     </li>
                     {% endif %}
 
