--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -121,21 +121,21 @@
           </div>
           <div class="col-md-8 col-lg-8">
             <div class="row justify-content-evenly text-light g-4">
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
+              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/burgers.svg') }}"
                 />
                 <h5 class="text-center my-3">Comida</h5>
               </div>
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
+              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/mascotas.svg') }}"
                 />
                 <h5 class="text-center my-3">Mascotas</h5>
               </div>
-              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
+              <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBxHome">
                 <img
                   class="img-fluid"
                   src="{{ url_for('static', filename='images/gifts.svg') }}"
