--- a/flask_app/static/css/styles.css
+++ b/flask_app/static/css/styles.css
@@ -29,7 +29,7 @@
     height: 330px;
 }
 
-.categoryBx {
+.categoryBxHome {
     cursor: pointer;
 }
 
@@ -49,6 +49,10 @@
 .terminos:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.dropdown-menu {
+    z-index: 1001;
 }
 
 .mega-dropdown {
@@ -199,6 +203,138 @@
     text-decoration: underline;
 }
 
+.filterBx {
+    height: 500px;
+    overflow: auto;
+    position: relative;
+}
+
+.applyFilters {
+    position: sticky;
+    top: -25px;
+    z-index: 1000;
+}
+
+.wrapper-slider {
+    position: relative;
+    width: 100%;
+    padding: 0;
+    border-radius: 10px;
+}
+
+.container-slider {
+    position: relative;
+    width: 100%;
+    height: 60px;
+}
+
+input[type="range"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    outline: none;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    background-color: transparent;
+    pointer-events: none;
+}
+
+.slider-track {
+    width: 100%;
+    height: 5px;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    border-radius: 5px;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    -webkit-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-moz-range-track {
+    -moz-appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-ms-track {
+    appearance: none;
+    height: 5px;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 1.2em;
+    width: 1.2em;
+    background-color: #5c636a;
+    cursor: pointer;
+    margin-top: -6px;
+    pointer-events: auto;
+    border-radius: 50%;
+}
+
+input[type="range"]::-moz-range-thumb {
+    -webkit-appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #192d4a;
+    pointer-events: auto;
+}
+
+input[type="range"]::-ms-thumb {
+    appearance: none;
+    height: 1.7em;
+    width: 1.7em;
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: #192d4a;
+    pointer-events: auto;
+}
+
+input[type="range"]:active::-webkit-slider-thumb {
+    background-color: #ffffff;
+    border: 3px solid #5c636a;
+}
+
+.values-slider {
+    background-color: #5c636a;
+    width: 70%;
+    position: relative;
+    margin: auto;
+    padding: 10px 0;
+    border-radius: 5px;
+    text-align: center;
+    font-weight: 500;
+    font-size: 14px;
+    color: #ffffff;
+}
+
+.values-slider:before {
+    content: "";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-top: 15px solid #5c636a;
+    border-left: 15px solid transparent;
+    border-right: 15px solid transparent;
+    margin: auto;
+    bottom: -14px;
+    left: 0;
+    right: 0;
+}
+
+.starIcon {
+    position: relative;
+    bottom: 3px;
+}
+
 @media (max-width: 991px) {
     .nav-item.dropdown.dropdown-mega .dropdown-menu {
         width: 100%;
@@ -317,3 +453,11 @@
 
 
 /* --------------------- MEGAMENU ----------------- */
+
+.textCardEmpre {
+    font-size: 14px;
+    line-height: 1.5em;
+    height: 3em;
+    /* height is 2x line-height, so two lines will display */
+    overflow: hidden;
+}
