--- a/flask_app/static/sass/main.scss
+++ b/flask_app/static/sass/main.scss
@@ -8,7 +8,9 @@ $altprimary: #1d3557;
 $altlight: #f1faee;
 $altdark: #e63946;
 $tertiary: #a8dadc;
-$custom-theme-colors: ( "altlight": $altlight, "altdark": $altdark, "tertiary": $tertiary, "altprimary": $altprimary, "mainblue": $mainblue, );
+$graytheme: #f0f0f0;
+$yellowstar: #ffc300;
+$custom-theme-colors: ( "altlight": $altlight, "altdark": $altdark, "tertiary": $tertiary, "altprimary": $altprimary, "mainblue": $mainblue, "graytheme": $graytheme, "yellowstar": $yellowstar);
 $theme-colors: map-merge($theme-colors, $custom-theme-colors);
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 $utilities-colors: map-merge($utilities-colors, $theme-colors-rgb);
