--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -234,82 +234,250 @@
             </div>
         </div>
     </nav>
-
-    <section class="container-fluid">
+    <section class="container-fluid catologoBx">
         <div class="container">
-            <div class="d-sm-flex align-items-center justify-content-between homeBx">
-                <div class="text-center text-sm-start">
-                    <h1 class="text-dark">
-                        Todos los emprendimientos en
-                        <span class="text-tertiary">un mismo lugar!</span>
-                    </h1>
-                    <p class="text-dark lead my-4">
-                        EmprendeLand busca ser el primer directorio digital de emprendimientos del Perú
-                    </p>
-                    <button class="btn btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#register">
-              Registrar
-            </button>
-                    <button class="btn btn-altdark text-light mx-3" data-bs-toggle="modal" data-bs-target="#register">
-              Buscar
-            </button>
-                </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="{{ url_for('static', filename='images/img1.svg') }}" />
+            <div class="row my-3">
+                <div class="col-12"><span>Celulares</span><span class="mx-3">></span><span>Cargadores</span></div>
             </div>
-        </div>
-    </section>
-
-    <section class="container-fluid bg-altlight">
-        <div class="container bg-altlight py-5">
-            <div class="row align-items-center justify-content-center bg-altlight">
-                <div class="col-6 mb-4 mb-sm-3 col-lg-4">
-                    <img class="img-fluid image-section" src="{{ url_for('static', filename='images/img2.svg') }}" />
-                </div>
-
-                <div class="text-center col-md-6 col-lg-4 bg-altlight">
-                    <h3 class="text-dark">
-                        ¿Cansado de buscar opiniones, calificaciones sobre un emprendimiento?
-                    </h3>
-                    <p class="text-dark lead my-4">
-                        A todos nos ha pasado que en ocasiones especiales, nos es dificil encontrar ese emprendimiento que vimos, o encontrar alguno similar
-                    </p>
-                    <button class="btn btn-altdark text-light" data-bs-toggle="modal" data-bs-target="#register">
-              Únete a la comunidad
-            </button>
-                </div>
+            <div class="row my-3 justify-content-between border-bottom border-dark pb-3 align-items-center">
+                <div class="col-12 col-lg-6">273 Resultados en Cargadores</div>
+                <div class="d-none d-lg-block col-lg-3 ms-auto"><select class="form-select shadow-none ms-auto" aria-label="Default select example">
+                    <option value="menor">Más comentados</option>
+                    <option value="mayor">Más followers</option>
+                    <option value="recomendados" selected>Recomendados</option>
+                  </select></div>
             </div>
-        </div>
-    </section>
+            <div class="row">
+                <div class="d-none d-lg-block col-lg-3">
+                    <div class="bg-graytheme p-4 my-3"><span class="h4 border-start border-5 border-altprimary px-2">CARGADORES</span></div>
+                    <div class="bg-graytheme p-4 my-3 filterBx">
+                        <div class="applyFilters">
+                            <a class="btn btn-primary text-light w-100" href="#">Aplicar filtros</a>
+                        </div>
+                        <div class="d-flex my-4">
+                            <i class="bi bi-sliders"></i>
+                            <div class="h6 mb-0 pt-1 mx-2"> Filtro Rating</div>
+                        </div>
+                        <div class="wrapper-slider">
+                            <div class="values-slider">
+                                <span id="range1">
+                                    0
+                                </span>
+                                <span> &dash; </span>
+                                <span id="range2">
+                                    5 
+                                </span>
+                                <span class="mx-1"><i class="bi bi-star-fill starIcon"></i></span>
 
-    <section class="container-fluid my-5">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="text-center col-md-4 col-lg-4">
-                    <h3 class="text-dark">
-                        Explora Emprende<span class="text-altdark">Land</span>
-                    </h3>
-                    <p class="text-dark lead my-4">
-                        Encuentra tus emprendimientos por categorías, si no lo encuentras ayudanos a irlos categorizando, solo busca su usuario de Instagram y añadelo!
-                    </p>
+                            </div>
+                            <div class="container-slider">
+                                <div class="slider-track"></div>
+                                <input type="range" min="0" max="500" value="0" id="slider-1" oninput="slideOne()">
+                                <input type="range" min="0" max="500" value="500" id="slider-2" oninput="slideTwo()">
+                            </div>
+                        </div>
+                        <div class="d-flex my-4">
+                            <i class="bi bi-sliders"></i>
+                            <div class="h6 mb-0 pt-1 mx-2"> Filtro Reviews</div>
+                        </div>
+                        <div class="wrapper-slider">
+                            <div class="values-slider">
+                                <span id="range3">
+                                    0
+                                </span>
+                                <span> &dash; </span>
+                                <span id="range4">
+                                    5 
+                                </span>
+                                <span class="mx-1"><i class="bi bi-chat-left-quote-fill starIcon"></i></span>
+
+                            </div>
+                            <div class="container-slider">
+                                <div class="slider-track"></div>
+                                <input type="range" min="0" max="500" value="0" id="slider-3" oninput="slide3()">
+                                <input type="range" min="0" max="500" value="200" id="slider-4" oninput="slide4()">
+                            </div>
+                        </div>
+
+                        <div class="d-flex my-4">
+                            <i class="bi bi-sliders"></i>
+                            <div class="h6 mb-0 pt-1 mx-2"> Filtro Followers</div>
+                        </div>
+                        <div class="wrapper-slider">
+                            <div class="values-slider">
+                                <span id="range5">
+                                    0
+                                </span>
+                                <span> &dash; </span>
+                                <span id="range6">
+                                    5 
+                                </span>
+                                <span class="mx-1"><i class="bi bi-people-fill starIcon"></i></span>
+
+                            </div>
+                            <div class="container-slider">
+                                <div class="slider-track"></div>
+                                <input type="range" min="0" max="20000" value="0" id="slider-5" oninput="slide5()">
+                                <input type="range" min="0" max="20000" value="5700" id="slider-6" oninput="slide6()">
+                            </div>
+                        </div>
+
+                    </div>
+
                 </div>
-                <div class="col-md-8 col-lg-8">
-                    <div class="row justify-content-evenly text-light g-4">
-                        <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
-                            <img class="img-fluid" src="{{ url_for('static', filename='images/burgers.svg') }}" />
-                            <h5 class="text-center my-3">Comida</h5>
+
+                <div class="col-12 col-lg-9">
+                    <div class="row justify-content-evenly">
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
                         </div>
-                        <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
-                            <img class="img-fluid" src="{{ url_for('static', filename='images/mascotas.svg') }}" />
-                            <h5 class="text-center my-3">Mascotas</h5>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
                         </div>
-                        <div class="col-7 col-sm-3 bg-mainblue rounded-3 p-4 categoryBx">
-                            <img class="img-fluid" src="{{ url_for('static', filename='images/gifts.svg') }}" />
-                            <h5 class="text-center my-3">Regalos</h5>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
                         </div>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
+                        </div>
+
+
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-6 col-lg-3 my-2">
+                            <div class="bg-graytheme p-2">
+                                <img class="img-fluid" src="{{ url_for('static', filename='images/product.jpg') }}" alt="">
+                                <div class="mt-3 d-flex justify-content-between align-items-center">
+                                    <span class="h6">Rumbero</span>
+                                    <span class="h6"><i class="bi bi-heart starIcon"></i></span>
+                                </div>
+                                <p class="my-0 textCardEmpre">¡Para todos los rumberos que lleven la salsa en la piel! Ropa salsera del Perú Hecho en algodón peruano Envíos gratis a todo el Perú </p>
+                                <div class="my-1 text-yellowstar">
+                                    <i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i><i class="bi bi-star-fill mx-1"></i>
+                                </div>
+                                <div class="mt-3 textCardEmpre">
+                                    (45 calificaciones)
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
                     </div>
                 </div>
             </div>
         </div>
+
+
     </section>
+
+
 
     <section class="footer">
         <div class="row container">
